# McpTesting

./: .gitignore  LICENSE  README.md  app.py  chat_processor.py  config.json.sample  config.py  initializers.py  mcp_server.py  next.config.mjs  nodemon.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  server.ts  tailwind.config.mjs  tool_handler.py
.github/: copilot-instructions.md
.github/workflows/: build-test.yaml
bot_config/: config.json.sample  system-instruction-summarizer.md.sample  system_instruction.md
chat_sessions/: 502bb3d8-167a-4584-ac32-31c4ae2eaede.json  5c026e39-5512-46bb-ba61-11884688b742.json  adfdded2-af93-44eb-a8dc-4cc70f02de7f.json
chroma_db/: chroma.sqlite3
src/: app.py  socketio_handlers.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/logs/: route.ts
src/app/logs/: page.tsx
src/chroma_db/: chroma.sqlite3
src/components/: ChatInterface.tsx  ChatMessage.tsx  LogEntryRow.tsx  LogTable.tsx  LogViewer.tsx  LogViewerControls.tsx
src/hooks/: useChatSocket.tsx  useLogData.tsx
src/logic/: chat_processor.py  config.py  history_manager.py  initializers.py  mcp_server.py  tool_handler.py  utils.py
src/logic/chat/: chat_helpers.py  chat_processor.py  history_manager.py
src/logic/chat_loop/: chat_helpers.py  chat_processor.py
src/logic/core/: history_cache_handler.py  initializers.py  socketio_handlers.py
src/logic/mcp/: mcp_helpers.py  mcp_server.py  tool_handler.py
src/server/: chat-processor.ts  config.ts  gemini-service.ts  history-cache.ts  initializers.ts  logger.ts  mcp-client.ts  tool-handler.ts
src/server/agent/: agent-config.ts  agent-executor.ts  history-cache.ts  history-manager.ts  prompt-manager.ts  tool-orchestrator.ts
src/server/agent/history/: cleanup-service.ts  conversation-analyzer.ts  history-cache.ts  history-manager-provider.ts  history-manager.ts  importance-scorer.ts  message-utils.ts  summarization-strategies.ts  types.ts
src/server/agent/history/analysis/: analyzer-factory.ts  regex-analyzer.ts  semantic-analyzer.ts
src/server/agent/history/conversation-analysis/: conversation-analyzer-service.ts  conversation-analyzer.ts  heuristic-analyzer-strategy.ts  llm-analyzer-strategy.ts  pattern-matcher.ts  topic-entity-extractor.ts
src/server/agent/history/strategies/: base-decorator.ts  base-strategy.ts  cost-optimized-strategy.ts  importance-aware-cost-optimized-strategy.ts  importance-aware-traditional-strategy.ts  strategy-factory.ts  traditional-strategy.ts  types.ts
src/server/agent/history/strategies/decorators/: base-decorator.ts  code-preserving-decorator.ts  open-question-preserving-decorator.ts  reference-preserving-decorator.ts  verbosity-reducing-decorator.ts
src/server/config/: agent.ts  base.ts  index.ts  llm.ts  server.ts
src/server/llm/embeddings/: embedding-client.ts  types.ts
src/server/llm/gemini/: client.ts  generation.ts  parsing.ts  summarization.ts  tokenization.ts
src/server/tools/mcp/: mcp-initializer.ts  mcp-tool-handler.ts
src/server/types/: mcp.ts
src/server/utils/: schema-utils.ts
src/static/: style.css
src/templates/: index.html
templates/: index.html
