[project]
name = "mcpbro"
version = "0.1.0"
description = ""
authors = [
    {name = "Jakub Skurek",email = "JakubS@kentico.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.34.0"

[tool.poe.tasks]
start = "python -B run.py"

